# fictional-potato

./: Cargo.toml  README.md
src/: colors.rs  constants.rs  login_screen.rs  main.rs  register_screen.rs
src/components/: input.rs  mod.rs
src/screens/: app_screen.rs  mod.rs
src/styles/: button.rs  container.rs  input.rs  mod.rs
src/utils/: mod.rs  secure_storage.rs
