[package]
name = "fictional-potato"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.13.1", features = ["advanced", "image", "lazy", "svg", "tokio"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

turbo-pancake = { path = "../turbo-pancake/" }
