[package]
name = "fictional-potato"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
iced = { version = "0.13.1", features = ["advanced", "image", "lazy", "svg", "tokio"] }
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.224", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }

turbo-pancake = { path = "../turbo-pancake/" }
validator = { version = "0.20.0", features = ["derive"] }
zxcvbn = "3.1.0"
